# aurora

./: .gitignore  README.md  allow-btmon.sh  analysis_options.yaml  build-android.sh  launch-android.sh  launch-cli.sh  launch-desktop.sh  launch-linux.sh  launch-web.sh  pubspec.yaml  release.sh  releases.md
.github/workflows/: build-android.yml  build-linux.yml  build-windows.yml  release.yml  test.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
assets/: hello_world.wasm  terminal_settings.ui.json
assets/wapps/: aprs.wapp  archiver.wapp  bluetooth.wapp  chat.wapp  circles.wapp  files.wapp  functionalities.wapp  indexer.wapp  install.wapp  maps.wapp  messages.wapp  mp4player.wapp  nostr.wapp  reticulum.wapp  social.wapp  tasks.wapp  tester.wapp  torrents.wapp  widget_demo.wapp
doc/: esp32.md  folders.md  mesh.md  nostr.md
docs/: NOSTR.md  README.md  aprs-xt.md  aprs.md  aprx.md  ble.md  chat-rooms.md  chat.md  circles.md  esp32.md  nostr-fix.md  nostr.md  notifications.md  performance.md  plan-encrypted-storage.md  plan-launcher-hero.md  plan-launcher.md  plan-messages.md  plan-signer.md  reticulum-connections.md  reusable.md  social.md  sync.md  task-update.md  torrent-import.md  torrents-as-websites.md  torrents.md  validation.md
esp32/: .gitignore  README.md  build.sh  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32_generic  sdkconfig.esp32s3_epaper_1in54  sdkconfig.heltec_v1  sdkconfig.kv4p  sdkconfig.tdongle_s3  serial.sh  upload.sh
esp32/boards/: sdkconfig.esp32_generic  sdkconfig.esp32c3_mini  sdkconfig.esp32s3_epaper_1in54  sdkconfig.heltec_v1  sdkconfig.heltec_v2  sdkconfig.heltec_v3  sdkconfig.kv4p  sdkconfig.tdongle_s3
esp32/components/geogram_aprs/: CMakeLists.txt  aprs_store.c  aprs_store.h
esp32/components/geogram_blemesh/: CMakeLists.txt  blemesh.h  blemesh_beacon.c  blemesh_scf.c  blemesh_session.c  blemesh_session.h  blemesh_table.c  test_msp_host.c
esp32/components/geogram_lanwatch/: CMakeLists.txt  lanwatch.c  lanwatch.h
esp32/components/geogram_model_tdongle_s3/: CMakeLists.txt  model_config.h  model_init.c  model_init.h
esp32/components/geogram_msgstore/: CMakeLists.txt  msgstore.c  msgstore.h
esp32/components/geogram_pcf85063/: CMakeLists.txt
esp32/components/geogram_sdcard/: CMakeLists.txt  sdcard.c
esp32/components/geogram_shtc3/: CMakeLists.txt
esp32/components/geogram_ssd1306/: CMakeLists.txt
esp32/components/geogram_st7735/: CMakeLists.txt  st7735.c  st7735.h
esp32/components/geogram_tdongle_ui/: CMakeLists.txt  tdongle_ui.c  tdongle_ui.h
esp32/docs/: API.md
esp32/include/: app_config.h
esp32/rns_ble5/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.rns_ble5
esp32/scripts/: captive_portal_check.sh  pre_build.py
esp32/src/: CMakeLists.txt  main.cpp
esp32/tests/: aprs.sh  aprs_rx.py  aprs_tx.py  demod_test.py  direwolf_test.sh  test_esp32.sh
installer/: aurora.iss  portable.marker
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  version.dart
lib/ai/: ai.dart  ai_config.dart  ai_message.dart  ai_provider.dart  ai_providers.dart  ai_service.dart  stream_lines.dart
lib/connections/: builtin_connections.dart  connection.dart  connection_registry.dart  connections.dart
lib/editor/: code_editor_field.dart  editor_install.dart  robot_chat_controller.dart  wapp_compiler_backend_io.dart  wapp_compiler_backend_web.dart  wapp_compiler_service.dart  wapp_editor.dart  wapp_robot.dart
lib/geoui/: geoui_ast.dart  geoui_parser.dart  geoui_renderer.dart
lib/launcher/: all_apps_sheet.dart  app_drawer.dart  connection_indicator.dart  hardware_page.dart  hero_carousel.dart  home_header.dart  home_modules.dart  launcher.dart  launcher_app.dart  launcher_page.dart  muted_page.dart  notifications_page.dart  novelties_carousel.dart  (+8 more)
linux/: CMakeLists.txt
memory/: MEMORY.md  c61-budget-phone-release-only.md  circles-internet-test-state.md  rns-passive-mode-and-wapp-priority.md  rns-path-requests.md
test/: activity_archive_test.dart  activity_following_filter_test.dart  aprx_capture_test.dart  aprx_encrypt_test.dart  aprx_sign_test.dart  archiver_direct_link_test.dart  atm_bridge_test.dart  ble_broadcast_test.dart  ble_parcel_test.dart  ble_reassembler_test.dart  blossom_live_fetch_test.dart  blurhash_test.dart  coin_bridge_test.dart  connections_test.dart  enc_seed_helper_test.dart  file_deposit_test.dart  files_sharing_test.dart  folder_collab_test.dart  folder_library_test.dart  folder_listing_sync_test.dart  folder_meta_test.dart  follow_mirror_test.dart  geo_chat_archive_test.dart  hero_inbox_test.dart  hero_ranker_test.dart  host_retention_policy_test.dart  media_archive_test.dart  media_prefer_mesh_test.dart  media_ref_test.dart  mesh_bulk_spool_test.dart  mesh_custodian_test.dart  mesh_scheduler_test.dart  mesh_session_test.dart  mesh_store_test.dart  mesh_test.dart  nfolder_test.dart  node_profile_announce_test.dart  node_radios_test.dart  nostr_signer_test.dart  note_mentions_test.dart  (+10 more)
tool/: blossom_pub_test.dart  blossom_publish.dart  bt_download_check.dart  bt_fetch_path_check.dart  bt_internet_check.dart  bt_seed_serve.dart  bt_serve_data_check.dart  bt_serve_metadata_check.dart  disk_folder_test.dart  folder_discovery_test.dart  folder_disk_test.dart  folder_model_test.dart  folder_net_test.dart  folder_service_test.dart  i2p_2hop_crypto_test.dart  i2p_2hop_real_test.dart  i2p_crypto_test.dart  i2p_discover_test.dart  i2p_dump_ri.dart  i2p_fetch.dart  i2p_fragment_test.dart  i2p_leech.dart  i2p_local_test.dart  i2p_node_real_test.dart  i2p_node_test.dart  i2p_ntcp2_test.dart  i2p_ob_build_test.dart  i2p_ob_swarm_test.dart  i2p_pause_test.dart  i2p_phase1_test.dart  i2p_phase2_test.dart  i2p_phase2_xdeliver_test.dart  i2p_reseed_test.dart  i2p_serve.dart  i2p_serve_swarm.dart  i2p_swarm_real_test.dart  i2p_swarm_test.dart  i2p_tunnel_build_test.dart  i2p_tunnel_crypto_test.dart  i2p_tunnel_data_test.dart  (+47 more)
updates/: beta.json
web/: .gitignore  index.html  manifest.json
windows/: CMakeLists.txt
(+385 files in other folders)
